server/deployment/k8s/card-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: card-service
  labels:
    app: card-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: card-service
  template:
    metadata:
      labels:
        app: card-service
    spec:
      containers:
      - name: card-service
        image: loretta-bank/card-service:latest
        ports:
        - containerPort: 8080
