server/deployment/k8s/card-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: card.lorettabank.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: card-service
            port:
              number: 80
